2024-08-22  Ulrich Müller  <ulm@gentoo.org>

	* test/ebuild-mode-tests.el (cl-letf, cl-letf*)
	(ebuild-mode-test-run-with-fixed-time)
	(ebuild-mode-test-run-silently, ebuild-mode-test-font-lock)
	(ebuild-mode-test-unescape-string): Portability fixes for XEmacs.
	* test/glep-mode-tests.el (glep-mode-test-run-with-fixed-time):
	Sync from ebuild-mode-test-run-with-fixed-time.
	* test/xemacs-test-wrapper.el: New file.
	* Makefile (DISTFILES): Add xemacs-test-wrapper.el.
	(ELCS, TESTS): Include only files that are actually supported by
	the Emacs version.
	(check): Make it work with XEmacs.

	* ebuild-mode.el (ebuild-repo-mode): Activate the menu in XEmacs.
	Use positive condition for feature.

	* ebuild-mode.el (ebuild-mode-menu): Drop :active keyword because
	the three-element vector form of menu items is more portable.
	(ebuild-repo-mode-menu): Rename menu bar item to "Ebuild-Repo".
	Replace :visible keyword by :included; XEmacs 21.4 doesn't know
	the former.

	* ebuild-mode.el (ebuild-mode-update-copyright): Save match data,
	replace-match in XEmacs 21.4 clobbers it.

2024-08-20  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-arch-stable-list): Use push.

	* ebuild-mode.el (ebuild-mode-collect-and-split): Don't copy the
	element when creating a cons cell is enough.
	* test/ebuild-mode-tests.el (ebuild-mode-test-collect-and-split):
	Update.

2024-08-19  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el:
	* ebuild-mode-keywords.el:
	* gentoo-newsitem-mode.el:
	* glep-mode.el:
	* devbook-mode.el: Doc fixes.

	* ebuild-mode.el (ebuild-run-command-*): Run the "clean" command
	when a prefix argument is given.
	* ebuild-mode.texi (ebuild-mode): Document it.

	* ebuild-mode.el (ebuild-mode-find-image-dir): New function.
	(ebuild-mode-prefix-map, ebuild-mode-menu): Keybinding and
	menu entry.
	* ebuild-mode.texi (ebuild-mode): Document it.

2024-08-16  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-run-command-*): Define functions